Fix backend crash: allow models in git and add startup logging

--- a/.gitignore
+++ b/.gitignore
@@ -150,8 +150,8 @@ cython_debug/
 # VS Code
 .vscode/
 
-# Local data and models
-*.keras
+# Local data and models (Allow production models)
+!*.keras
 *.h5
 dataset/
 output/
